# c-calculator

./: .dockerignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md
.github/workflows/: ci.yml
html/: annotated.html  classHistory-members.html  classHistory.html  classRPN-members.html  classRPN.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  history_8cpp.html  history_8cpp__incl.map  history_8cpp__incl.md5  history_8h.html  history_8h__dep__incl.map  history_8h__dep__incl.md5  history_8h__incl.map  history_8h__incl.md5  history_8h_source.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  rpn_8cpp.html  rpn_8cpp__incl.map  rpn_8cpp__incl.md5  rpn_8h.html  rpn_8h__dep__incl.map  rpn_8h__dep__incl.md5  rpn_8h_source.html
html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_1.js  files_0.js  (+6 more)
include/: history.h  rpn.h
latex/: annotated.tex  classHistory.tex  classRPN.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  history_8cpp.tex  history_8cpp__incl.md5  history_8h.tex  history_8h__dep__incl.md5  history_8h__incl.md5  history_8h_source.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex  rpn_8cpp.tex  rpn_8cpp__incl.md5  rpn_8h.tex  rpn_8h__dep__incl.md5  rpn_8h_source.tex
src/: history.cpp  main.cpp  rpn.cpp
tests/: CMakeLists.txt  test_rpn.cpp
